--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,40 @@
-.header {
-  padding: 20px 0;
-}
-.nav {
+/*Мобільна версія*/
+.header-container {
   display: flex;
-  justify-content: space-between;
+  gap: 143px;
+  position: absolute;
+  z-index: 9;
+  padding-top: 32px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
-.nav-logo {
-  display: inline-flex;
+
+.header-logo {
+  display: flex;
+  gap: 8px;
+}
+.header-svg-logo {
+  fill: #fafafa;
+}
+.header-svg-btn {
+  stroke: #fafafa;
+}
+
+.btn-mob-menu {
+  width: 28px;
+  height: 28px;
+  padding: 6px 1px;
+  display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+
+.header-nav {
+  display: none;
 }
-.nav-link {
-  position: relative;
-  display: block;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
-}
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
-}
-.nav-link.active::after {
-  background: #747bff;
-}
+
+/*планшетна версія*/
