add id and class container

--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,106 +1,108 @@
-<div class="main-div" id="faq-section">
-    <h1 class="fag-h1">FAQ</h1>
-    <ul class="accordion fag-ul" data-accordion>
-        <li class="accordion__item fag-li right-border accordion">
-            <button class="accordion-header">What programming languages are most often used in your project?
-                <div class="svg-right-div">
-                    <svg class="icon-sec icon-up" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-down"></use>
-                    </svg>
-                    <svg class="icon-sec icon-down" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-up"></use>
-                    </svg>
+<section id="faq">
+    <div class="container">
+        <h1 class="fag-h1">FAQ</h1>
+        <ul class="accordion fag-ul" data-accordion>
+            <li class="accordion__item fag-li right-border accordion">
+                <button class="accordion-header">What programming languages are most often used in your project?
+                    <div class="svg-right-div">
+                        <svg class="icon-sec icon-up" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-down"></use>
+                        </svg>
+                        <svg class="icon-sec icon-down" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-up"></use>
+                        </svg>
+                    </div>
+                </button>
+                <div class="accordion-content accordion-body">In the field of web development, there are various
+                    technologies and programming languages. Typically, this includes a
+                    combination of frontend (client side) and backend (server side) languages.
                 </div>
-            </button>
-            <div class="accordion-content accordion-body">In the field of web development, there are various
-                technologies and programming languages. Typically, this includes a
-                combination of frontend (client side) and backend (server side) languages.
-            </div>
-        </li>
-        <li class="accordion__item fag-li right-border accordion">
-            <button class="accordion-header">What are the deadlines for the project?
-                <div class="svg-right-div">
-                    <svg class="icon-sec icon-up" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-down"></use>
-                    </svg>
-                    <svg class="icon-sec icon-down" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-up"></use>
-                    </svg>
+            </li>
+            <li class="accordion__item fag-li right-border accordion">
+                <button class="accordion-header">What are the deadlines for the project?
+                    <div class="svg-right-div">
+                        <svg class="icon-sec icon-up" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-down"></use>
+                        </svg>
+                        <svg class="icon-sec icon-down" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-up"></use>
+                        </svg>
+                    </div>
+                </button>
+                <div class="accordion-content accordion-body">The terms of project implementation depend to a large extent
+                    on a number of factors, such as the scope of the project,
+                    its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and
+                    it usually
+                    occurs during the planning phase of the project.
                 </div>
-            </button>
-            <div class="accordion-content accordion-body">The terms of project implementation depend to a large extent
-                on a number of factors, such as the scope of the project,
-                its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and
-                it usually
-                occurs during the planning phase of the project.
-            </div>
-        </li>
-        <li class="accordion__item fag-li right-border accordion">
-            <button class="accordion-header">What payment methods do you accept?
-                <div class="svg-right-div">
-                    <svg class="icon-sec icon-up" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-down"></use>
-                    </svg>
-                    <svg class="icon-sec icon-down" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-up"></use>
-                    </svg>
+            </li>
+            <li class="accordion__item fag-li right-border accordion">
+                <button class="accordion-header">What payment methods do you accept?
+                    <div class="svg-right-div">
+                        <svg class="icon-sec icon-up" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-down"></use>
+                        </svg>
+                        <svg class="icon-sec icon-down" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-up"></use>
+                        </svg>
+                    </div>
+                </button>
+                <div class="accordion-content accordion-body">Payment through credit and debit cards such as Visa,
+                    MasterCard, specialized electronic payment systems such as PayPal,
+                    as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
                 </div>
-            </button>
-            <div class="accordion-content accordion-body">Payment through credit and debit cards such as Visa,
-                MasterCard, specialized electronic payment systems such as PayPal,
-                as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
-            </div>
-        </li>
-        <li class="accordion__item fag-li right-border accordion">
-            <button class="accordion-header">How can I contact you?
-                <div class="svg-right-div">
-                    <svg class="icon-sec icon-up" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-down"></use>
-                    </svg>
-                    <svg class="icon-sec icon-down" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-up"></use>
-                    </svg>
+            </li>
+            <li class="accordion__item fag-li right-border accordion">
+                <button class="accordion-header">How can I contact you?
+                    <div class="svg-right-div">
+                        <svg class="icon-sec icon-up" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-down"></use>
+                        </svg>
+                        <svg class="icon-sec icon-down" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-up"></use>
+                        </svg>
+                    </div>
+                </button>
+                <div class="accordion-content accordion-body">In the field of web development, there are various
+                    technologies and programming languages. Typically, this includes a
+                    combination of frontend (client side) and backend (server side) languages.
                 </div>
-            </button>
-            <div class="accordion-content accordion-body">In the field of web development, there are various
-                technologies and programming languages. Typically, this includes a
-                combination of frontend (client side) and backend (server side) languages.
-            </div>
-        </li>
-        <li class="accordion__item fag-li right-border accordion">
-            <button class="accordion-header">Do you provide advice or support?
-                <div class="svg-right-div">
-                    <svg class="icon-sec icon-up" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-down"></use>
-                    </svg>
-                    <svg class="icon-sec icon-down" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-up"></use>
-                    </svg>
+            </li>
+            <li class="accordion__item fag-li right-border accordion">
+                <button class="accordion-header">Do you provide advice or support?
+                    <div class="svg-right-div">
+                        <svg class="icon-sec icon-up" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-down"></use>
+                        </svg>
+                        <svg class="icon-sec icon-down" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-up"></use>
+                        </svg>
+                    </div>
+                </button>
+                <div class="accordion-content accordion-body">The terms of project implementation depend to a large extent
+                    on a number of factors, such as the scope of the project,
+                    its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and
+                    it usually
+                    occurs during the planning phase of the project.
                 </div>
-            </button>
-            <div class="accordion-content accordion-body">The terms of project implementation depend to a large extent
-                on a number of factors, such as the scope of the project,
-                its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and
-                it usually
-                occurs during the planning phase of the project.
-            </div>
-        </li>
-        <li class="accordion__item fag-li right-border accordion">
-            <button class="accordion-header">What does the process of developing a software product look like from idea
-                to implementation?
-                <div class="svg-right-div">
-                    <svg class="icon-sec icon-up" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-down"></use>
-                    </svg>
-                    <svg class="icon-sec icon-down" width="20" height="20">
-                        <use href="/img/sprite.svg#icon-arrow-up"></use>
-                    </svg>
+            </li>
+            <li class="accordion__item fag-li right-border accordion">
+                <button class="accordion-header">What does the process of developing a software product look like from idea
+                    to implementation?
+                    <div class="svg-right-div">
+                        <svg class="icon-sec icon-up" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-down"></use>
+                        </svg>
+                        <svg class="icon-sec icon-down" width="20" height="20">
+                            <use href="/img/sprite.svg#icon-arrow-up"></use>
+                        </svg>
+                    </div>
+                </button>
+                <div class="accordion-content accordion-body">Payment through credit and debit cards such as Visa,
+                    MasterCard, specialized electronic payment systems such as PayPal,
+                    as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
                 </div>
-            </button>
-            <div class="accordion-content accordion-body">Payment through credit and debit cards such as Visa,
-                MasterCard, specialized electronic payment systems such as PayPal,
-                as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
-            </div>
-        </li>
-    </ul>
-</div>
+            </li>
+        </ul>
+    </div>
+</section>
