--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
         alt="logo"
       />
       <svg class="header-svg-logo" width="84" height="19">
-        <use href="/img/header.svg#icon-logo"></use>
+        <use href="/img/sprite.svg#icon-logo"></use>
       </svg>
     </a>
     <nav class="header-nav">
@@ -20,7 +20,7 @@
     </nav>
     <button class="btn-mob-menu">
       <svg class="header-svg-btn" width="21" height="16">
-        <use href="/img/header.svg#icon-menu"></use>
+        <use href="/img/sprite.svg#icon-menu"></use>
       </svg>
     </button>
   </div>
