--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,24 +1,26 @@
 <div class="modal-overlay-menu">
   <div class="mobile-menu container">
-    <button class="mobmenu-btn-close">X</button>
+    <button class="mobmenu-btn-close">
+      <svg class="mobmenu-svg-close" width="14" height="14">
+        <use href="/img/sprite.svg#icon-close"></use>
+      </svg>
+    </button>
     <nav class="mobmenu-nav">
       <ul class="mobnemu-list">
         <li class="mobmenu-list-item">
-          <a class="mobmenu-list-link" href="">About me</a>
+          <a class="mobmenu-list-link" href="#about_me">About me</a>
         </li>
         <li class="mobmenu-list-item">
-          <a class="mobmenu-list-link" href="">Benefits</a>
+          <a class="mobmenu-list-link" href="#benefits">Benefits</a>
         </li>
         <li class="mobmenu-list-item">
-          <a class="mobmenu-list-link" href="">Projects</a>
+          <a class="mobmenu-list-link" href="#projects">Projects</a>
         </li>
         <li class="mobmenu-list-item">
-          <a class="mobmenu-list-link" href="">FAQ</a>
+          <a class="mobmenu-list-link" href="#faq">FAQ</a>
         </li>
       </ul>
     </nav>
-    <div class="mobmebu-container-btn-project">
-      <button class="mobmenu-btn-project">Order the project</button>
-    </div>
+    <button class="mobmenu-btn-project">Order the project</button>
   </div>
 </div>
