--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,3 +1,4 @@
+/*модальне вікно*/
 .modal-overlay-menu {
     position: fixed;
     top: 0;
@@ -10,7 +11,7 @@
     align-items: center;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 250ms linear, visibility 250ms linear;
+    transition: opacity 250ms linear;
     background-color: rgba(12, 12, 12, 0.99);
 }
 
@@ -25,26 +26,43 @@
     gap: 50px;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    padding-bottom: 64px;
+    padding-top: 30vh;
+    width: 100%;
     height: 100vh;
     background-image: url('../img/hero/hero-1x-mob.png');
     background-position: center;
     background-size: cover;
 }
+@media screen and (min-resolution:192dpi) {
+    .mobile-menu {
+        background-image: url(../img/hero/hero-2x-mob.png);
+    }
+}
 
-
-
+/*кнопка закрити*/
 .mobmenu-btn-close {
     width: 28px;
     height: 28px;
     position: absolute;
     top: 32px;
-    left: 315px;
+    right: 16px;
+    background-color: transparent;
+    border: none;
 }
 
-.mobmenu-nav {
-    padding: 302px 136px 289px;
+.mobmenu-svg-close {
+    fill: #fafafa;
+    transition: fill 250ms linear;
 }
 
+.mobmenu-svg-close:hover,
+.mobmenu-svg-close:focus {
+    fill: #ed3b44;
+}
+
+/*навігація*/
 .mobnemu-list {
     display: flex;
     flex-direction: column;
@@ -52,20 +70,21 @@
     align-items: center;
 }
 
-.mobmenu-list-item {}
-
 .mobmenu-list-link {
     font-weight: 500;
     font-size: 16px;
     letter-spacing: -0.02em;
     text-decoration: underline;
     color: #fafafa;
+    transition: color 250ms linear;
 }
 
-.mobmebu-container-btn-project {
-padding: 0px 90px 64px;
+.mobmenu-list-link:hover,
+.mobmenu-list-link:focus {
+    color: #ed3b44;
 }
 
+/*кнопка скролу до проектів*/
 .mobmenu-btn-project {
     background-color: #ed3b44;
     border-radius: 60px;
@@ -77,4 +96,10 @@ padding: 0px 90px 64px;
     letter-spacing: -0.02em;
     color: #fafafa;
     border: none;
+    transition: background-color 250ms linear;
+}
+
+.mobmenu-btn-project:hover,
+.mobmenu-btn-project:focus {
+    background-color: #e0373f;
 }
