--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,7 +1,7 @@
 <section id="faq">
     <div class="container">
         <h1 class="fag-h1">FAQ</h1>
-        <ul class="accordion fag-ul" data-accordion>
+        <ul class="accordion fag-ul">
             <li class="accordion__item fag-li right-border accordion">
                 <button class="accordion-header">What programming languages are most often used in your project?
                     <div class="svg-right-div">
