fix images names

--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -2,162 +2,162 @@
     <div class="container">
         <ul class="projects-list">
             <li>
-                <img src="../img/project_img(1).jpg" alt="" />
+                <img src="../img/project_img_1.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(2).jpg" alt="" />
+                <img src="../img/project_img_2.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(3).jpg" alt="" />
+                <img src="../img/project_img_3.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(4).jpg" alt="" />
+                <img src="../img/project_img_4.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(5).jpg" alt="" />
+                <img src="../img/project_img_5.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(6).jpg" alt="" />
+                <img src="../img/project_img_6.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(7).jpg" alt="" />
+                <img src="../img/project_img_7.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(8).jpg" alt="" />
+                <img src="../img/project_img_8.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(9).jpg" alt="" />
+                <img src="../img/project_img_9.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(10).jpg" alt="" />
-            </li>
-        </ul>
-        <ul class="projects-list">
-            <li>
-                <img src="../img/project_img(3).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(4).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(5).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(6).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(7).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(8).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(9).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(10).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(1).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(2).jpg" alt="" />
+                <img src="../img/project_img_10.jpg" alt="" />
             </li>
         </ul>
         <ul class="projects-list">
             <li>
-                <img src="../img/project_img(6).jpg" alt="" />
+                <img src="../img/project_img_3.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(7).jpg" alt="" />
+                <img src="../img/project_img_4.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(8).jpg" alt="" />
+                <img src="../img/project_img_5.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(9).jpg" alt="" />
+                <img src="../img/project_img_6.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(10).jpg" alt="" />
+                <img src="../img/project_img_7.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(1).jpg" alt="" />
+                <img src="../img/project_img_8.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(2).jpg" alt="" />
+                <img src="../img/project_img_9.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(3).jpg" alt="" />
+                <img src="../img/project_img_10.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(4).jpg" alt="" />
+                <img src="../img/project_img_1.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(5).jpg" alt="" />
-            </li>
-        </ul>
-        <ul class="projects-list">
-            <li>
-                <img src="../img/project_img(9).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(10).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(1).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(2).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(3).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(4).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(5).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(6).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(7).jpg" alt="" />
-            </li>
-            <li>
-                <img src="../img/project_img(8).jpg" alt="" />
+                <img src="../img/project_img_2.jpg" alt="" />
             </li>
         </ul>
         <ul class="projects-list">
             <li>
-                <img src="../img/project_img(1).jpg" alt="" />
+                <img src="../img/project_img_6.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(2).jpg" alt="" />
+                <img src="../img/project_img_7.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(3).jpg" alt="" />
+                <img src="../img/project_img_8.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(4).jpg" alt="" />
+                <img src="../img/project_img_9.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(5).jpg" alt="" />
+                <img src="../img/project_img_10.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(6).jpg" alt="" />
+                <img src="../img/project_img_1.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(7).jpg" alt="" />
+                <img src="../img/project_img_2.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(8).jpg" alt="" />
+                <img src="../img/project_img_3.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(9).jpg" alt="" />
+                <img src="../img/project_img_4.jpg" alt="" />
             </li>
             <li>
-                <img src="../img/project_img(10).jpg" alt="" />
+                <img src="../img/project_img_5.jpg" alt="" />
+            </li>
+        </ul>
+        <ul class="projects-list">
+            <li>
+                <img src="../img/project_img_9.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_10.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_1.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_2.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_3.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_4.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_5.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_6.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_7.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_8.jpg" alt="" />
+            </li>
+        </ul>
+        <ul class="projects-list">
+            <li>
+                <img src="../img/project_img_1.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_2.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_3.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_4.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_5.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_6.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_7.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_8.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_9.jpg" alt="" />
+            </li>
+            <li>
+                <img src="../img/project_img_10.jpg" alt="" />
             </li>
         </ul>
     </div>
