--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -13,7 +13,9 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    gap: 46px;
+    gap: 28px;
+    width: 100%;
+    max-width: 100vw;
 }
 
 .projects-list{
@@ -21,7 +23,7 @@
     top: calc(-162px * 2);
     left: calc(-282px * 2);
     display: flex;
-    gap:  46px;
+    gap:  23px;
     transform: rotate(16deg)
 }
 
@@ -31,7 +33,7 @@
 
 .projects-list  li{
     min-width: 282px;
-    /* height: 162px; */
+
 }
 
 .projects-list img{
@@ -42,13 +44,16 @@
 @media (min-width: 768px) {
     #covers .container{
         height: 960px;
+        gap: 56px;
+    }
+    .projects-list {
+        gap: 46px;
     }
     .projects-list li {
             min-width: 544px;
-            /* height: 162px; */
-        }
+    }
     .projects-list img {
             width: 544px;
             height: 314px;
-        }
+    }
 }
