--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,5 +1,4 @@
 .about-me {
-
     margin: 0 auto;
     padding: 0;
     margin-bottom: 60px;
@@ -8,7 +7,7 @@
 
 .about-me>.container {
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 16px;
 }
 
 .hidden {
@@ -31,13 +30,14 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 16px;
+    margin-bottom: 12px;
 }
 
 .discr-card {
     border-radius: 24px;
     width: 343px;
     height: 500px;
-    background: var(--cards);
+    background: #3B3B3B;
 
     /*
     width: 100%;
@@ -48,13 +48,14 @@
 }
 
 .discr-text {
-    font-family: var(--font-family);
+    font-family: "Inter Tight",
+        sans-serif;;
     font-weight: 500;
     font-size: 24px;
     line-height: 117%;
     letter-spacing: -0.03em;
     text-transform: uppercase;
-    color: var(--main-text);
+    color: #FAFAFA;
     width: 279px;
     height: auto;
     margin-top: 32px;
@@ -63,7 +64,7 @@
 }
 
 .discr-text>.accent-first {
-    color: var(--button-text);
+    color: #ED3B44;
 }
 
 .discr-text>.accent-second {
@@ -79,21 +80,30 @@
 }
 
 .accordion {
-    margin-top: 32px;
+    margin-top: 12px;
     width: 343px;
     height: auto;
-
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.accordion-item {}
+.accordion-item {
+    border-bottom: 1px solid rgba(250, 250, 250, 0.4);
+}
 
-.accordion-item>.open {}
+.accordion-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    padding-top: 20px;
+    padding-bottom: 12px;
+}
 
-.accordion-header {}
-
-.accordion-header-text {
-
-    font-family: var(--font-family);
+.accordion-title {
+    font-family: "Inter Tight",
+        sans-serif;;
     font-weight: 600;
     font-size: 16px;
     line-height: 150%;
@@ -101,18 +111,105 @@
     text-transform: uppercase;
     color: rgba(250, 250, 250, 0.4);
 }
-
-.accordion-toggle {}
+.accordion-toggle {
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.svg-right-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    border-radius: 100px;
+    padding: 9px;
+    width: 36px;
+    height: 36px;
+    margin-left: 23px;
+    background-color: transparent;
+}
+.icon-sec {
+    display: none;
+}
+.icon-up {
+    display: block;
+}
+.accordion-header[aria-expanded="true"] .icon-up {
+    display: block;
+}
+.accordion-header[aria-expanded="true"] .icon-down {
+    display: none;
+}
+.accordion-header[aria-expanded="false"] .icon-up {
+    display: none;
+}
+.accordion-header[aria-expanded="false"] .icon-down {
+    display: block;
+}
 
 .accordion-content {
-    font-family: var(--font-family);
+    font-family: "Inter Tight",
+        sans-serif;;
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: -0.02em;
-    color: var(--main-text);
+    color: #FAFAFA;
+    display: none;
+    padding-top: 12px;
+    padding-bottom: 20px;
+
 }
 
+.accordion-item.open .accordion-content {
+    display: block;
+}
+
+.accordion-about-text{
+    margin-top: 32px;
+}
+
+.accordion-role-list{
+display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+
+.skills-list {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 0px;
+    margin-top: 32px;
+    margin-bottom: 20px;
+}
+
+.skills-list-items{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    border-radius: 50%;
+    width: 130px;
+    height: 130px;
+    background-color: transparent;
+}
+
+.skills-list-items.chosen {
+    background-color: #ED3B44;
+}
 
 
 
