--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -19,25 +19,32 @@
             <ul class="accordion">
                 <li class="accordion-item open">
                     <div class="accordion-header">
-                        <span class="accordion-header-text">About Me</span>
                         <button class="accordion-toggle" aria-expanded="true">
-                            <img src="path-to-up-icon.svg" alt="Collapse" class="icon icon-up" />
+                            <span class="accordion-title">About Me</span>
+                            <div class="svg-right-div">
+                                <svg class="icon-sec icon-up" width="20" height="20">
+                                    <use href="/img/sprite.svg#icon-arrow-up"></use>
+                                </svg>
+                                <svg class="icon-sec icon-down" width="20" height="20">
+                                    <use href="/img/sprite.svg#icon-arrow-down"></use>
+                                </svg>
+                            </div>
                         </button>
                     </div>
                     <div class="accordion-content">
-                        <p>I am Lloyd Jefferson, a talented programmer with extensive expertise in software development.
+                        <p >I am Lloyd Jefferson, a talented programmer with extensive expertise in software development.
                             I have an understanding of
                             different programming languages and technologies, always ready to improve my skills. I
                             always follow the latest trends
                             and look for unconventional, creative solutions to problems. I have a high level of
                             analytical skills and am able to
                             effectively solve even the most difficult tasks encountered on the way.</p>
-
-                        <p> Able to work both independently and in a team. I can effectively cooperate with colleagues,
+                        <p class="accordion-about-text">Able to work both independently and in a team. I can effectively cooperate with colleagues,
                             exchanging ideas and finding
                             optimal solutions. Professional maturity allows you to calmly cope with challenges and
                             stressful situations, while
-                            maintaining a high quality of work. I am always looking for opportunities for
+                            maintaining a high quality of work.</p>
+                        <p> I am always looking for opportunities for
                             self-improvement. I actively study new
                             technologies and practices to stay abreast of the latest innovations. I have a strong
                             understanding of various
@@ -45,30 +52,45 @@
                             efficient and scalable software.</p>
                     </div>
                 </li>
-                <li class="accordion-item">
+                <li class="accordion-item open">
                     <div class="accordion-header">
-                        <span class="accordion-header-text">Role</span>
-                        <button class="accordion-toggle" aria-expanded="false">
-                            <img src="path-to-down-icon.svg" alt="Collapse" class="icon icon-down" />
+                        <button class="accordion-toggle" aria-expanded="true">
+                            <span class="accordion-title"> Role </span>
+                            <div class="svg-right-div">
+                                <svg class="icon-sec icon-up" width="20" height="20">
+                                    <use href="/img/sprite.svg#icon-arrow-up"></use>
+                                </svg>
+                                <svg class="icon-sec icon-down" width="20" height="20">
+                                    <use href="/img/sprite.svg#icon-arrow-down"></use>
+                                </svg>
+                            </div>
                         </button>
                     </div>
                     <div class="accordion-content">
-                        <ul>
+                        <ul class="accordion-role-list">
                             <li>Frontend development</li>
                             <li>HeadlessCMS, Wordpress</li>
                             <li>Blender (enjoy)</li>
                         </ul>
                     </div>
+
                 </li>
-                <li class="accordion-item">
+                <li class="accordion-item open">
                     <div class="accordion-header">
-                        <span class="accordion-header-text">Education</span>
-                        <button class="accordion-toggle" aria-expanded="false">
-                            <img src="path-to-down-icon.svg" alt="Expand" class="icon icon-down" />
+                        <button class="accordion-toggle" aria-expanded="true">
+                            <span class="accordion-title">Education</span>
+                            <div class="svg-right-div">
+                                <svg class="icon-sec icon-up" width="20" height="20">
+                                    <use href="/img/sprite.svg#icon-arrow-up"></use>
+                                </svg>
+                                <svg class="icon-sec icon-down" width="20" height="20">
+                                    <use href="/img/sprite.svg#icon-arrow-down"></use>
+                                </svg>
+                            </div>
                         </button>
                     </div>
                     <div class="accordion-content">
-                        <ul>
+                        <ul class="accordion-role-list">
                             <li>2018 - 2019 / Frontend Development Diploma, GoIT IT School, New York</li>
                             <li>2019 - 2020 / Advanced Web Development Certificate, GoIT IT School, New York</li>
                             <li>2020 - 2022 / Advanced Blender Animation Techniques, Udemy</li>
@@ -79,15 +101,15 @@
         </div>
         <div>
             <ul class="skills-list">
-                <li>HTML/CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node. js</li>
-                <li>React Native</li>
-                <li>Soft skills</li>
+                <li class="skills-list-items chosen">HTML/CSS</li>
+                <li class="skills-list-items">JavaScript</li>
+                <li class="skills-list-items">React</li>
+                <li class="skills-list-items">Node. js</li>
+                <li class="skills-list-items">React Native</li>
+                <li class="skills-list-items">Soft skills</li>
             </ul>
             <!--
-                <button class="accordion-toggle" aria-expanded="false">
+                <button class="accordion-toggle" >
                     <img src="path-to-side-icon.svg" alt="Expand" class="icon icon-right" />
                 </button> 
                 -->
