--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,56 +1,59 @@
-<section class="section benefits">
-  <div class="container">
-    <h2 class="section-title">Benefits of working with me</h2>
-    <ul class="benefits-menu">
-      <li class="benefits-menu-item">
-        <div class="item-svg-box">
-          <svg class="item-svg" width="24" height="24">
-            <use href="../img/sprite.svg#icon-user"></use>
-          </svg>
+<section class="section benefits" id="benefits">
+    <div class="container container-benefits">
+        <h2 class="section-title">Benefits of working with me</h2>
+        <div class="benefits-menu-link">
+            <ul class="benefits-menu">
+                <li class="benefits-menu-item">
+                    <div class="item-svg-box">
+                        <svg class="item-svg" width="24" height="24">
+                            <use href="/img/sprite.svg#icon-user"></use>
+                        </svg>
+                    </div>
+                    <h4 class="menu-item-title">Expertise</h4>
+                    <p class="menu-item-text">
+                        As a highly experienced developer, I have deep knowledge
+                        of programming and website development.
+                    </p>
+                </li>
+                <li class="benefits-menu-item">
+                    <div class="item-svg-box">
+                        <svg class="item-svg" width="24" height="24">
+                            <use href="/img/sprite.svg#icon-message-chat"></use>
+                        </svg>
+                    </div>
+                    <h4 class="menu-item-title">Communication</h4>
+                    <p class="menu-item-text">
+                        Understanding your needs and wants is my priority and I
+                        am always open to discussions and corrections.
+                    </p>
+                </li>
+                <li class="benefits-menu-item">
+                    <div class="item-svg-box">
+                        <svg class="item-svg" width="24" height="24">
+                            <use href="/img/sprite.svg#icon-brush"></use>
+                        </svg>
+                    </div>
+                    <h4 class="menu-item-title">Art</h4>
+                    <p class="menu-item-text">
+                        Thanks to my creative nature, I am ready to accept
+                        challenges and help you bring your ideas to life.
+                    </p>
+                </li>
+                <li class="benefits-menu-item">
+                    <div class="item-svg-box">
+                        <svg class="item-svg" width="24" height="24">
+                            <use href="/img/sprite.svg#icon-hourglass"></use>
+                        </svg>
+                    </div>
+                    <h4 class="menu-item-title">Urgent execution</h4>
+                    <p class="menu-item-text">
+                        I understand how important time is to you. Ready to work
+                        quickly and efficiently, without reducing the quality of
+                        work.
+                    </p>
+                </li>
+            </ul>
+            <a class="benefits-anchor-link" href="#footer">Order the project</a>
         </div>
-        <h4 class="menu-item-title">Expertise</h4>
-        <p class="menu-item-text">
-          As a highly experienced developer, I have deep knowledge of
-          programming and website development.
-        </p>
-      </li>
-      <li class="benefits-menu-item">
-        <div class="item-svg-box">
-          <svg class="item-svg" width="24" height="24">
-            <use href="../img/sprite.svg#icon-message-chat"></use>
-          </svg>
-        </div>
-        <h4 class="menu-item-title">Communication</h4>
-        <p class="menu-item-text">
-          Understanding your needs and wants is my priority and I am always open
-          to discussions and corrections.
-        </p>
-      </li>
-      <li class="benefits-menu-item">
-        <div class="item-svg-box">
-          <svg class="item-svg" width="24" height="24">
-            <use href="../img/sprite.svg#icon-brush"></use>
-          </svg>
-        </div>
-        <h4 class="menu-item-title">Art</h4>
-        <p class="menu-item-text">
-          Thanks to my creative nature, I am ready to accept challenges and help
-          you bring your ideas to life.
-        </p>
-      </li>
-      <li class="benefits-menu-item">
-        <div class="item-svg-box">
-          <svg class="item-svg" width="24" height="24">
-            <use href="../img/sprite.svg#icon-hourglass"></use>
-          </svg>
-        </div>
-        <h4 class="menu-item-title">Urgent execution</h4>
-        <p class="menu-item-text">
-          I understand how important time is to you. Ready to work quickly and
-          efficiently, without reducing the quality of work.
-        </p>
-      </li>
-    </ul>
-    <a class="benefits-anchor-link" href="#footer">Order the project</a>
-  </div>
+    </div>
 </section>
