--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -9,9 +9,9 @@ body {
     align-items: center;
 }
 
-.container {
+/* .container {
     margin-top: 64px;
-}
+} */
 
 .fag-h1 {
     font-weight: 600;
