--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero hero-img">
+<section class="hero-img">
   <div class="container">
     <h1 class="hero-title">Hello. I’m Fullstack developer Lloyd Jefferson.</h1>
     <ul class="hero-list">
