--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,24 +2,28 @@
 
 /*фонове зображення*/
 .hero-img {
-    background-image: 
-    url(../img/hero/hero-1x-mob.png);
+    /* background-image: 
+    url(../img/hero/hero-1x-mob.png); */
+    position: relative;
+    background-image: linear-gradient(-90deg,
+        #000 50%,
+        #69292d 68%,
+        #ed3b44 100%),
+    url(/img/hero.svg);
+    backdrop-filter: blur(4px);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    width: 100vw;
 }
-@media screen and (min-resolution:192dpi) {
+/* @media screen and (min-resolution:192dpi) {
     .hero-img {
         background-image: url(../img/hero/hero-2x-mob.png);
     }
-}
+} */
 
 /*контент секції*/
-.hero {
-    position: relative;
-    max-width: 100%;
-    margin: 0 auto;
-}
+
 .hero-title {
     padding: 281px 0 212px;
     font-weight: 500;
