--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,18 +10,30 @@
         <use href="/img/sprite.svg#icon-logo"></use>
       </svg>
     </a>
-    <nav class="header-nav">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    <div class="header-container-nav">
+      <button class="header-btn-navigation" type="button">Menu</button>
+      <ul class="header-navigation">
+        <li class="header-navigation-item">
+          <a class="header-navigation-link" href="#about_me">About me</a>
+        </li>
+        <li class="header-navigation-item">
+          <a class="header-navigation-link" href="#benefits">Benefits</a>
+        </li>
+        <li class="header-navigation-item">
+          <a class="header-navigation-link" href="#projects">Projects</a>
+        </li>
+        <li class="header-navigation-item">
+          <a class="header-navigation-link" href="#faq">FAQ</a>
+        </li>
       </ul>
-    </nav>
-    <button class="btn-mob-menu">
+    </div>
+
+    <button type="button" class="btn-mob-menu">
       <svg class="header-svg-btn" width="21" height="16">
         <use href="/img/sprite.svg#icon-menu"></use>
       </svg>
     </button>
+
+    <button class="header-btn-order">Order the project</button>
   </div>
 </header>
