--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,55 +2,17 @@
   <div class="container">
     <h2 class="section-title">reviews</h2>
     <ul class="cards"></ul>
-    <div class="arrows">
-      <button type="button" class="arrow">
-        <svg
-          width="32"
-          height="32"
-          viewBox="0 0 32 32"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M26.6667 16H5.33342"
-            stroke="#FAFAFA"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M13.3333 24L5.33325 16L13.3333 8"
-            stroke="#FAFAFA"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
+    <nav class="arrows">
+      <button class="arrow">
+        <svg width="24" height="24" class="svg-one">
+          <use href="./img/sprite.svg#icon-arrow-narrow-left"></use>
         </svg>
       </button>
-      <button type="button" class="arrow">
-        <svg
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M4 12H20"
-            stroke="#FAFAFA"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M14 6L20 12L14 18"
-            stroke="#FAFAFA"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
+      <button class="arrow">
+        <svg width="24" height="24" class="svg-two">
+          <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
         </svg>
       </button>
-    </div>
+    </nav>
   </div>
 </section>
