--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -29,6 +29,8 @@ color: rgba(250, 250, 250, 0.4);
     display: flex;
     flex-wrap: wrap;
     gap: 4px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .tag{
@@ -62,13 +64,15 @@ width: 141px;
 height: 45px;
 background-color: #ED3B44;
 margin-top: 32px;
-align-items: center;
-justify-content: center;
+
 font-family: var(--font-family);
 font-weight: 500;
 font-size: 16px;
 letter-spacing: -0.02em;
 color: #FAFAFA;
+ display: flex; 
+    align-items: center; 
+    justify-content: center;
 }
 
 .bth-project:hover,
@@ -80,6 +84,7 @@ color: #FAFAFA;
     background-color: #242527;
     border-radius: 0 0 24px 24px;
     height: auto;
+    
 }
 
 .nav-bth{
@@ -123,3 +128,69 @@ height: 52px;
     cursor: not-allowed;
     opacity: 0.5;
 }
+
+@media (min-width: 768px) {
+ .projects-section{
+    margin-top: 96px;
+    margin-bottom: 96px;
+}
+
+.tags-panel{
+    width: auto;
+    height: 55px;
+    display: flex;
+    left: 64px;
+    gap: 6px;
+     padding-top: 64px;
+    padding-bottom: 64px;
+}
+.tag{
+padding:18px;
+height: 55px;
+ display: flex; 
+    align-items: center; 
+    justify-content: center;
+}
+
+
+.p-project{
+    margin-top: 164px; 
+    
+    font-size: 44px;
+    line-height: 100%;
+width: 494px;
+height: auto;
+}
+
+.bth-project{
+
+padding: 18px 50px;
+width: 177px;
+height: 55px;
+
+
+}
+.swiper-container{
+   padding: 120px 45px;
+      
+}
+.nav-bth{
+height: 68px;
+margin-top: 64px;
+gap: 20px;
+}
+
+.swiper-button-prev{
+padding: 18px;
+width: 68px;
+height: 68px;
+}
+
+.swiper-button-next{
+padding: 18px;
+width: 68px;
+height: 68px;
+
+}
+}
+
