--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -11,43 +11,22 @@
       <p class="p-project">
         Programming Across Borders: Ideas, Technologies, Innovations
       </p>
-      <a
-        class="bth-project"
-        target="_blank"
-        href="https://github.com/lapoonder/superiore"
-        role="button"
-        >See project</a
-      >
+      <a class="bth-project" target="_blank" href="https://github.com/lapoonder/superiore" role="button">See project</a>
     </div>
 
     <div class="swiper-container">
       <ul class="swiper-wrapper">
         <li class="swiper-slide">
-          <img
-            loading="lazy"
-            srcset="./img/img-1-1x.png 1x, ./img/img-1-2x.png 2x"
-            src="./img/img-1-1x.png"
-            alt="project-one"
-            class="img-project"
-          />
+          <img loading="lazy" srcset="./img/img-1-1x.png 1x, ./img/img-1-2x.png 2x" src="./img/img-1-1x.png"
+            alt="project-one" class="img-project" />
         </li>
         <li class="swiper-slide">
-          <img
-            loading="lazy"
-            srcset="./img/img-2-1x.png 1x, ./img/img-2-2x.png 2x"
-            src="./img/img-2-1x.png"
-            alt="project-two"
-            class="img-project"
-          />
+          <img loading="lazy" srcset="./img/img-2-1x.png 1x, ./img/img-2-2x.png 2x" src="./img/img-2-1x.png"
+            alt="project-two" class="img-project" />
         </li>
         <li class="swiper-slide">
-          <img
-            loading="lazy"
-            srcset="./img/img-3-1x.png 1x, ./img/img-3-2x.png 2x"
-            src="./img/img-3-1x.png"
-            alt="project-three"
-            class="img-project"
-          />
+          <img loading="lazy" srcset="./img/img-3-1x.png 1x, ./img/img-3-2x.png 2x" src="./img/img-3-1x.png"
+            alt="project-three" class="img-project" />
         </li>
       </ul>
     </div>
