--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -1,15 +1,3 @@
-body {
-    font-family: "Inter Tight", sans-serif;
-    background-color: #1C1D20;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-}
-
-
 .fag-ul {
     padding: 0;
     list-style: none;
@@ -84,4 +72,39 @@ body {
 
 .icon-down {
     /* display: none; */
+}
+
+
+
+
+@media only screen and (min-width: 768px) {
+    .fag-li {
+        width: 704px;
+    }
+
+    .accordion-header {
+        margin-top: 32px;
+        margin-bottom: 26px;
+    }
+
+    .accordion-body {
+        padding-bottom: 24px;
+        width: 640px;
+    }
+
+    .fag-ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .icon-sec {
+        border: 1px solid rgba(250, 250, 250, 0.2);
+        border-radius: 100px;
+        padding: 10px;
+        width: 40px;
+        height: 40px;
+        margin-left: 8px;
+    }
 }
