--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,13 +3,13 @@
     <h2 class="section-title">reviews</h2>
     <ul class="cards"></ul>
     <nav class="arrows">
-      <button class="arrow">
-        <svg width="24" height="24" class="svg-one">
+      <button class="arrow disabled">
+        <svg width="24" height="24" class="svg-left disabled">
           <use href="./img/sprite.svg#icon-arrow-narrow-left"></use>
         </svg>
       </button>
       <button class="arrow">
-        <svg width="24" height="24" class="svg-two">
+        <svg width="24" height="24" class="svg-right">
           <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
         </svg>
       </button>
