--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,11 +2,8 @@
 
 /*фонове зображення*/
 .hero-img {
-    /* background-image: 
-    url(../img/hero/hero-1x-mob.png); */
-    position: relative;
     background-image: 
-    url(/img/hero.svg),
+    url(../img/hero/glass_effect_mob.png),
     linear-gradient(-90deg,
         #000 50%,
         #69292d 68%,
@@ -15,18 +12,25 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    width: 100vw;
 }
-/* @media screen and (min-resolution:192dpi) {
+@media screen and (min-resolution:192dpi) {
     .hero-img {
-        background-image: url(../img/hero/hero-2x-mob.png);
+        background-image: url(../img/hero/glass_effect_mob@2x.png),
+        linear-gradient(-90deg,
+                #000 50%,
+                #69292d 68%,
+                #ed3b44 100%);
     }
-} */
+}
 
 /*контент секції*/
+.hero {
+    position: relative;
+}
 
 .hero-title {
-    padding: 281px 0 212px;
+    padding-top: 281px;
+    padding-bottom: 212px;
     font-weight: 500;
     font-size: 50px;
     line-height: 1;
@@ -50,6 +54,12 @@
     border-radius: 60px;
     padding: 10px 12px;
     height: 37px; 
+    transition: border 250ms linear;
+}
+
+.hero-list-item:hover,
+.hero-list-item:focus {
+    border: 1px solid #fafafa;
 }
 
 .hero-list-link {
@@ -61,7 +71,67 @@
 
 /*Планшетна версія*/
 @media screen and (min-width: 768px) {
+    .hero-img {
+        background-image:
+                url(../img/hero/glass_effect_tab.png),
+                linear-gradient(-90deg,
+                    #000 50%,
+                    #69292d 68%,
+                    #ed3b44 100%);
+    }
+@media screen and (min-resolution:192dpi) {
+    .hero-img {
+        background-image: url(../img/hero/glass_effect_tab@2x.png),
+                linear-gradient(-90deg,
+                    #000 50%,
+                    #69292d 68%,
+                    #ed3b44 100%);
+            }
+        }
+
     .hero-title {
         font-size: 90px;
+        padding: 300px 72px 187px 0;
+    }
+
+    .hero-list {
+        gap: 8px;
+        justify-content: flex-end;
+    }
+
+    .hero-list-item {
+        padding: 18px 20px;
+        height: 55px;
+    }
+
+    .hero-list-link{
+        font-size: 16px;
+    }
+}
+
+/*Десктопна версія*/
+@media (min-width: 1440px) {
+    .hero-img {
+        background-image:
+            url(../img/hero/glass_effect.png),
+            linear-gradient(-90deg,
+                #000 50%,
+                #69292d 68%,
+                #ed3b44 100%);
+        }
+    
+    @media screen and (min-resolution:192dpi) {
+        .hero-img {
+            background-image: url(../img/hero/glass_effect@2x.png),
+                linear-gradient(-90deg,
+                    #000 50%,
+                    #69292d 68%,
+                    #ed3b44 100%);
+            }
+        }
+
+    .hero-title {
+        font-size: 90px;
+        padding: 300px 146px 243px;
     }
 }
