--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,28 +1,47 @@
 <section class="hero-img">
-  <div class="container">
-    <h1 class="hero-title">Hello. I’m Fullstack developer Lloyd Jefferson.</h1>
-    <ul class="hero-list">
-      <li class="hero-list-item">
-        <a class="hero-list-link" href="https://www.instagram.com/goitclub/"
-          >IG</a
-        >
-      </li>
-      <li class="hero-list-item">
-        <a class="hero-list-link" href="https://www.facebook.com/goITclub/"
-          >FB</a
-        >
-      </li>
-      <li class="hero-list-item">
-        <a class="hero-list-link" href="https://www.youtube.com/c/GoIT">YT</a>
-      </li>
-      <li class="hero-list-item">
-        <a class="hero-list-link" href="https://github.com/lapoonder/superiore"
-          >GH</a
-        >
-      </li>
-      <li class="hero-list-item">
-        <a class="hero-list-link" href="">test@gmail.com</a>
-      </li>
-    </ul>
-  </div>
+    <div class="hero container">
+        <h1 class="hero-title">
+            Hello. <br />
+            I’m Fullstack developer Lloyd Jefferson.
+        </h1>
+        <ul class="hero-list">
+            <li class="hero-list-item">
+                <a
+                    target="_blank"
+                    class="hero-list-link"
+                    href="https://www.instagram.com/goitclub/"
+                    >IG</a
+                >
+            </li>
+            <li class="hero-list-item">
+                <a
+                    target="_blank"
+                    class="hero-list-link"
+                    href="https://www.facebook.com/goITclub/"
+                    >FB</a
+                >
+            </li>
+            <li class="hero-list-item">
+                <a
+                    target="_blank"
+                    class="hero-list-link"
+                    href="https://www.youtube.com/c/GoIT"
+                    >YT</a
+                >
+            </li>
+            <li class="hero-list-item">
+                <a
+                    target="_blank"
+                    class="hero-list-link"
+                    href="https://github.com/lapoonder/superiore"
+                    >GH</a
+                >
+            </li>
+            <li class="hero-list-item">
+                <a class="hero-list-link" href="mailto:test@gmail.com"
+                    >test@gmail.com</a
+                >
+            </li>
+        </ul>
+    </div>
 </section>
