update animation in covers.css

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,44 +1,48 @@
 <footer class="container footer">
-  <div class="section footer-section">
-    <h2 class="footer-header">
-      <img
-        loading="lazy"
-        srcset="/img/lloydjefferson.png 1x, /img/lloydjefferson@x2.png 2x"
-        src="/img/lloydjefferson.png"
-        alt="Lloyd Jefferson"
-        class="footer-image"
-      />
-      LET'S <span>WORK</span> TOGETHER
-    </h2>
-  </div>
-  <form class="footer-form">
-    <input
-      name="email"
-      class="form-input form-input-email"
-      type="email"
-      placeholder="clients@gmail.com"
-      id="email"
-      required
-      autocomplete="off"
-      pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-      title="The field can contain e-mail address"
-    />
-    <input
-      name="comment"
-      class="form-input form-input-comments"
-      type="text"
-      placeholder="comments"
-      id="comment"
-      required
-      autocomplete="off"
-      title='The field "comments" can contain text'
-    />
-    <button type="submit" class="btn-form">Send</button>
-  </form>
-  <div class="footer-contacts">
-    <a href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a>
-    <a href="tel.+380111111111" class="footer-contact-phone"
-      >+380 11 111 11 11</a
-    >
-  </div>
+    <div class="section footer-section">
+        <h2 class="footer-header">
+            <img
+                loading="lazy"
+                loading="lazy"
+                srcset="
+                    /img/lloydjefferson.png    1x,
+                    /img/lloydjefferson@x2.png 2x
+                "
+                src="/img/lloydjefferson.png"
+                alt="Lloyd Jefferson"
+                class="footer-image"
+            />
+            LET'S <span>WORK</span> TOGETHER
+        </h2>
+    </div>
+    <form class="footer-form">
+        <input
+            name="email"
+            class="form-input form-input-email"
+            type="email"
+            placeholder="clients@gmail.com"
+            id="email"
+            required
+            autocomplete="off"
+            pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+            title="The field can contain e-mail address"
+        />
+        <input
+            name="comment"
+            class="form-input form-input-comments"
+            type="text"
+            placeholder="comments"
+            id="comment"
+            required
+            autocomplete="off"
+            title='The field "comments" can contain text'
+        />
+        <button type="submit" class="btn-form">Send</button>
+    </form>
+    <div class="footer-contacts">
+        <a href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a>
+        <a href="tel.+380111111111" class="footer-contact-phone"
+            >+380 11 111 11 11</a
+        >
+    </div>
 </footer>
