--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,27 +1,28 @@
 <header class="header">
-  <div class="container header-container">
-    <a class="header-logo" href="#">
-      <img
-        srcset="../img/logo-1x.png 1x, ../img/logo-2x.png 2x"
-        src="../img/logo-1x.png"
-        alt="logo"
-      />
-      <svg class="header-svg-logo" width="84" height="19">
-        <use href="/img/sprite.svg#icon-logo"></use>
-      </svg>
-    </a>
-    <nav class="header-nav">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </nav>
-    <button class="btn-mob-menu">
-      <svg class="header-svg-btn" width="21" height="16">
-        <use href="/img/sprite.svg#icon-menu"></use>
-      </svg>
-    </button>
-  </div>
+    <div class="container header-container">
+        <a class="header-logo" href="#">
+            <img
+                loading="lazy"
+                srcset="../img/logo-1x.png 1x, ../img/logo-2x.png 2x"
+                src="../img/logo-1x.png"
+                alt="logo"
+            />
+            <svg class="header-svg-logo" width="84" height="19">
+                <use href="/img/sprite.svg#icon-logo"></use>
+            </svg>
+        </a>
+        <nav class="header-nav">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <button class="btn-mob-menu">
+            <svg class="header-svg-btn" width="21" height="16">
+                <use href="/img/sprite.svg#icon-menu"></use>
+            </svg>
+        </button>
+    </div>
 </header>
