--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="container footer">
+<footer id="work_together" class="container footer">
     <div class="section footer-section">
         <h2 class="footer-header">
             <img
