--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,39 +1,47 @@
 <header class="header">
-  <div class="container header-container">
-    <a class="header-logo" href="#">
-      <img
-        srcset="../img/logo-1x.png 1x, ../img/logo-2x.png 2x"
-        src="../img/logo-1x.png"
-        alt="logo"
-      />
-      <svg class="header-svg-logo" width="84" height="19">
-        <use href="/img/sprite.svg#icon-logo"></use>
-      </svg>
-    </a>
-    <div class="header-container-nav">
-      <button class="header-btn-navigation" type="button">Menu</button>
-      <ul class="header-navigation">
-        <li class="header-navigation-item">
-          <a class="header-navigation-link" href="#about_me">About me</a>
-        </li>
-        <li class="header-navigation-item">
-          <a class="header-navigation-link" href="#benefits">Benefits</a>
-        </li>
-        <li class="header-navigation-item">
-          <a class="header-navigation-link" href="#projects">Projects</a>
-        </li>
-        <li class="header-navigation-item">
-          <a class="header-navigation-link" href="#faq">FAQ</a>
-        </li>
-      </ul>
+    <div class="container header-container">
+        <a class="header-logo" href="#">
+            <img
+                srcset="../img/logo-1x.png 1x, ../img/logo-2x.png 2x"
+                src="../img/logo-1x.png"
+                alt="logo"
+            />
+            <svg class="header-svg-logo" width="84" height="19">
+                <use href="/img/sprite.svg#icon-logo"></use>
+            </svg>
+        </a>
+        <div class="header-container-nav">
+            <button class="header-btn-navigation" type="button">Menu</button>
+            <ul class="header-navigation">
+                <li class="header-navigation-item">
+                    <a class="header-navigation-link" href="#about_me"
+                        >About me</a
+                    >
+                </li>
+                <li class="header-navigation-item">
+                    <a class="header-navigation-link" href="#benefits"
+                        >Benefits</a
+                    >
+                </li>
+                <li class="header-navigation-item">
+                    <a class="header-navigation-link" href="#projects"
+                        >Projects</a
+                    >
+                </li>
+                <li class="header-navigation-item">
+                    <a class="header-navigation-link" href="#faq">FAQ</a>
+                </li>
+            </ul>
+        </div>
+
+        <button type="button" class="btn-mob-menu">
+            <svg class="header-svg-btn" width="21" height="16">
+                <use href="/img/sprite.svg#icon-menu"></use>
+            </svg>
+        </button>
+
+        <button type="button" class="header-btn-order">
+            Order the project
+        </button>
     </div>
-
-    <button type="button" class="btn-mob-menu">
-      <svg class="header-svg-btn" width="21" height="16">
-        <use href="/img/sprite.svg#icon-menu"></use>
-      </svg>
-    </button>
-
-    <button class="header-btn-order">Order the project</button>
-  </div>
 </header>
