--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,5 +1,5 @@
 <div class="modal-overlay-menu">
-    <div class="mobile-menu container">
+    <div class="mobile-menu">
         <button class="mobmenu-btn-close">
             <svg class="mobmenu-svg-close" width="14" height="14">
                 <use href="/img/sprite.svg#icon-close"></use>
