--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -11,13 +11,16 @@
     align-items: center;
     opacity: 0;
     pointer-events: none;
-    transition: opacity 250ms linear;
     background-color: rgba(12, 12, 12, 0.99);
+    transition: opacity 500ms linear, visibility 500ms linear;
 }
 
 .modal-overlay-menu.is-open{
     opacity: 1;
     pointer-events: auto;
+    visibility: visible;
+    width: 100%;
+    height: 100%;
 } 
 
 .mobile-menu {
