--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -14,22 +14,22 @@
                 <picture>
                     <source
                         srcset="
-                            /img/about_me_desk.png    1x,
-                            /img/about_me_desk@2x.png 2x
+                            /img/about_me_desk.jpg    1x,
+                            /img/about_me_desk@2x.jpg 2x
                         "
                         media="(min-width: 1158px)"
                     />
                     <source
                         srcset="
-                            /img/about_me_tab.png    1x,
-                            /img/about_me_tab@2x.png 2x
+                            /img/about_me_tab.jpg    1x,
+                            /img/about_me_tab@2x.jpg 2x
                         "
                         media="(min-width: 768px)"
                     />
                     <source
                         srcset="
-                            /img/about_me_mob.png   1x,
-                            /img/about_me_mob@2.png 2x
+                            /img/about_me_mob.jpg   1x,
+                            /img/about_me_mob@2.jpg 2x
                         "
                         media="(max-width: 767px)"
                     />
