--- a/src/css/header.css
+++ b/src/css/header.css
@@ -96,10 +96,7 @@
   .header-navigation {
     position: absolute;
     top: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* display: none; */
+    display: none;
   }
 
   .header-navigation-link {
